--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "sqlite3": "^5.1.7"
   }
 }
